# VibeWeb-SocketIO

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
CONTEXT/: api.md  architecture.md  configuration.md  development.md  future-work.md  overview.md
dashboard/: rxconfig.py
dashboard/dashboard/: dashboard.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
src/app/: __init__.py  config.py  connection_manager.py  connections.py  dashboard.py  events.py  logging_config.py  main.py  message_log.py
tests/: test_connections.py  test_dashboard.py  test_events.py  test_main.py  test_message_log.py
